# Autolife

./: .gitignore  .pre-commit-config.yaml  IMPROVEMENTS.md  INSTRUCTION.md  INSTRUCTIONS.md  README.md  instruction.md  main.py  media_processororiginal.py  pytest.ini  requirements.txt  run_tests.py  setup.cfg  setup.py  test_report.html  test_srt_to_ass.py  tox.ini
.github/workflows/: python-test.yml  test.yml  tests.yml
docs/: API.md  USER_GUIDE.md
modules/: __init__.py  cache_utils.py  constants.py  disk_utils.py  ffmpeg_utils.py  file_list_widget.py  language_utils.py  main_window.py  network_utils.py  sidebar_menu.py  streaming_utils.py  tools_window.py  utilities.py
modules/converters/: srt_to_ass.py
modules/dialogs/: __init__.py  base_dialog.py  batch_dialog.py  conversion_dialog.py  subtitle_dialog.py  subtitle_edit_dialog.py  template_dialog.py
modules/media/: __init__.py  processor.py
modules/processing/: __init__.py  batch_manager.py
modules/translation/: __init__.py  translator.py
modules/ui/: __init__.py  file_list.py  language_panel.py  main_window.py  subtitle_edit.py  subtitle_preview.py  subtitle_preview_window.py
modules/utils/: __init__.py  config.py  logger.py  sync_utils.py
modules/workers/: srt_to_ass_worker.py  subtitle_worker.py  worker_signals.py
resources/templates/: default_template.ass
scripts/: check_reports.py
templates/: default.ass
test_files/: 1.ass  1.srt
tests/: conftest.py  generate_report.py  test_batch_manager.py  test_file_list.py  test_helpers.py  test_language_panel.py  test_report_template.html  test_sync_utils.py
tests/config/: test_config.py
tests/error_handling/: test_error_handling.py
(+15 files in other folders)
