[metadata]
name = autolife
version = 0.1.0
description = Advanced Media Subtitle Generator
long_description = file: README.md
long_description_content_type = text/markdown
author = Praharsh
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.8
install_requires =
    PyQt5>=5.15.9
    requests>=2.31.0
    torch>=2.2.1
    python-dotenv>=1.0.0
    numpy>=1.24.3
    ffmpeg-python>=0.2.0
    colorlog>=6.7.0

[options.extras_require]
test =
    pytest>=7.4.4
    pytest-cov>=4.1.0
    pytest-qt>=4.2.0
    pytest-xvfb>=3.0.0
dev =
    black
    flake8
    isort
    mypy
    pre-commit

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = 
    --verbose
    --cov=modules
    --cov-report=term-missing
    --cov-report=html
    --cov-branch
    --no-cov-on-fail

[isort]
profile = black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 100

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
